Return empty lists for alerts